@@ -6,6 +6,7 @@ date Version 3.00.51
 * FS#248 - "Property choices of wxChoice: Strings with single quotes are truncated"
   This forced incrementing the .fbp version to 1.9
 * FS#249 - "Paste From Clipboard requires Administrator privileges on Vista"
+* FS#252 - "OnSize event bug in RC3 for wxPanel."
 
 09/27/2007 Version 3.00.50 (RC3)
 * FS#234 - "wxFrame name parameter not available."
